; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ipfw/extr_nat64clat.c_nat64clat_destroy.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ipfw/extr_nat64clat.c_nat64clat_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@IP_FW_NAT64CLAT_DESTROY = common dso_local global i32 0, align 4
@EX_OSERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"failed to destroy nat instance %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @nat64clat_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nat64clat_destroy(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 @memset(%struct.TYPE_3__* %5, i32 0, i32 8)
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @nat64clat_fill_ntlv(i32* %7, i8* %8, i32 %9)
  %11 = load i32, i32* @IP_FW_NAT64CLAT_DESTROY, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %13 = call i64 @do_set3(i32 %11, i32* %12, i32 8)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load i32, i32* @EX_OSERR, align 4
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @err(i32 %16, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_3__*, i32, i32) #1

declare dso_local i32 @nat64clat_fill_ntlv(i32*, i8*, i32) #1

declare dso_local i64 @do_set3(i32, i32*, i32) #1

declare dso_local i32 @err(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
